syntax = "proto3";

package ServidorClientes;

message RegistroCliente{
    int32 id = 1;
    string nome = 2;
    string email = 3;
    string telefone = 4;
    string dataCadastro = 5;
}

message ClienteResponse{
    string message = 1;
    RegistroCliente rcliente = 2;
    int32 error = 3;
}

message Resultado{
    repeated RegistroCliente clientes = 1;
    ClienteResponse message = 2;
}

service Clientes{
    rpc Salvar(RegistroCliente) returns (ClienteResponse){}
    rpc Buscar(ModoBusca) returns (Resultado){}
    rpc Excluir(RegistroCliente) returns (ClienteResponse){}
}